feat(i18n): internationalize home page  8 languages fully supported
- Convert home page to async server component with getTranslations()
- Extract ~60 hardcoded Spanish strings to translation keys
- Add complete 'home' + 'footer' sections to all 8 message files:
  es, en, fr, eu, gl, ca, ast, zh
- Hero section already used useTranslations (unchanged)
- Verified all 3 tested locales render correctly (es, en, eu)
- Build passes with zero errors

--- a/web/src/i18n/messages/ast.json
+++ b/web/src/i18n/messages/ast.json
@@ -10,5 +10,93 @@
         "accomodation": "Allugamientu",
         "community": "Comunidá",
         "store": "Tienda"
+    },
+    "hero": {
+        "badge": "Mapa, planes y comunidá perruna",
+        "title1": "Too lo que precises",
+        "title2": "pa vivir col to perru",
+        "description": "Huellas del Norte axunta servicios, negocios y ocio pet friendly nun solu llugar: dende veterinarios 24h hasta rutes con agua.",
+        "cta_routes": "Esplorar Rutes",
+        "cta_passport": "Pasaporte Dixital"
+    },
+    "home": {
+        "highlights_badge": "Lo Que Vas Atopar",
+        "highlights_title": "Un Mapa Vivu Pa Dueños De Perros",
+        "highlight_map_title": "Mapa Pet Friendly",
+        "highlight_map_desc": "Descubre allugamientos, hostelería y rutes pa perros con filtros por zona, tipu de serviciu y accesibilidá.",
+        "highlight_calendar_title": "Calendariu & Eventos",
+        "highlight_calendar_desc": "Quedaes perrunes, xornaes d'adopción y actividaes con agua pa disfrutar tol añu.",
+        "highlight_community_title": "Comunidá & Adopciones",
+        "highlight_community_desc": "Conecta con protectores, asociaciones y redes d'ayuda pa perros perdíos.",
+        "layers_badge": "Prioridaes Norte 2026",
+        "layers_title": "Mapa Por Capes Con Datos Verificaos",
+        "layers_desc": "Playes aptes, veterinarios 24h, guarderíes con ocupación en tiempu real, rutes con agua/solombra, restaurantes pet friendly, tresporte con perru y ordenances municipales.",
+        "tech_title": "Productos teunolóxicos populares",
+        "tech_desc": "Curación de teunoloxía útil pa seguridá, salú y bienestar caninu.",
+        "integrations_title": "Integraciones necesaries",
+        "integration_1": "API d'ocupación pa guarderíes y hoteles caninos.",
+        "integration_2": "Fonte oficial de playes y ordenances por CCAA.",
+        "integration_3": "Directoriu de colexos veterinarios y urxencies.",
+        "integration_4": "Rutes verificaes pola comunidá y alministraciones.",
+        "legal_badge": "Llegal + Salú",
+        "legal_title": "Cumplimientu Y Atención Preventiva",
+        "legal_desc": "Pasaporte dixital, cursos obligatorios, seguros, telemedicina y triaxe asistíu por IA.",
+        "assistance_badge": "Perros d'apoyu",
+        "assistance_title": "Centros Y Asociaciones De Referencia",
+        "assistance_desc": "Directoriu curáu de perros guía, asistencia y terapia con filtros por rexón y tipu.",
+        "business_badge": "Negocios",
+        "business_title": "Servicios Pa Dueños",
+        "business_title2": "De Perros",
+        "business_desc": "Equí se muestren les categoríes qu'atoparás nel nuesu directoriu. Too pensáu pa la vida real col to perru.",
+        "biz_accommodation": "Allugamientos y campings",
+        "biz_vets": "Veterinarios 24h y peluqueríes",
+        "biz_kennels": "Guarderíes y hoteles caninos",
+        "biz_shops": "Tiendes y alimentación",
+        "biz_trainers": "Adestradores profesionales",
+        "biz_transport": "Tresporte pet friendly",
+        "biz_hospitality": "Hostelería pet friendly",
+        "biz_subs_title": "Suscripciones y formularios",
+        "biz_subs_desc": "Los negocios puen rexistrase y actualizar la so información con un formulariu rápidu. Tamién ufiertamos suscripciones pa destacar nel mapa.",
+        "biz_subs_cta": "Quiero apaecer nel mapa",
+        "map_badge": "Esplora'l Norte",
+        "map_title": "Mapa Interactivu",
+        "map_desc": "Descubre guarderíes, veterinarios, playes canines y perros n'adopción cerca de ti.",
+        "leisure_badge": "Ociu",
+        "leisure_title": "Planes, Comunidá",
+        "leisure_title2": "Y Conteniu",
+        "leisure_desc": "Dende rutes con agua hasta conteníos y recursos útiles: too ordenáu pa que puedas planificar la to selmana col to perru.",
+        "leisure_routes": "Rutes y rutes con agua",
+        "leisure_beaches": "Playes y playes fluviales",
+        "leisure_events": "Eventos y quedaes perrunes",
+        "leisure_forum": "Foru y comunidá",
+        "leisure_youtube": "Canales de YouTube sobre perros",
+        "leisure_adoption": "Comunidá, adopciones y perros perdíos",
+        "leisure_podcasts": "Podcasts y radio perruna",
+        "leisure_books": "Llibros, manuales y conseyos",
+        "leisure_support": "Perros d'apoyu",
+        "leisure_tech": "Teunoloxía pa perros",
+        "leisure_laws": "Lleis y ordenances canines",
+        "leisure_movies": "Películes p'amantes de los perros",
+        "db_title": "BD de perros",
+        "db_desc": "Fiches básiques, avisos de perda, adopciones y protectores con información actualizada.",
+        "calendar_title": "Calendariu compartíu",
+        "calendar_desc": "Publica eventos, quedaes y rutes con agua pa qu'otros puedan sumase.",
+        "collab_map_title": "Mapa colaborativu",
+        "collab_map_desc": "La comunidá pue suxerir nuevos llugares y verificar si siguen siendo pet friendly.",
+        "content_title": "Conteníos P'Amantes De Los Perros",
+        "content_desc": "Podcasts, llibros, manuales, canales de YouTube, teunoloxía canina y cine pa quien vive'l mundu perrunu al máximu.",
+        "newsletter_placeholder": "Recibe avisos y novedaes",
+        "newsletter_cta": "Suscribime",
+        "newsletter_note": "Avisos reales, cero spam."
+    },
+    "footer": {
+        "map": "Mapa",
+        "layers": "Capes",
+        "interactive": "Interactivu",
+        "legal": "Llegal",
+        "business": "Negocios",
+        "support": "Apoyu",
+        "community": "Comunidá",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
