--- a/web/src/i18n/messages/ca.json
+++ b/web/src/i18n/messages/ca.json
@@ -10,5 +10,93 @@
         "accomodation": "Allotjament",
         "community": "Comunitat",
         "store": "Botiga"
+    },
+    "hero": {
+        "badge": "Mapa, plans i comunitat canina",
+        "title1": "Tot el que necessites",
+        "title2": "per viure amb el teu gos",
+        "description": "Huellas del Norte reuneix serveis, negocis i lleure pet friendly en un sol lloc: des de veterinaris 24h fins a rutes amb aigua.",
+        "cta_routes": "Explorar Rutes",
+        "cta_passport": "Passaport Digital"
+    },
+    "home": {
+        "highlights_badge": "El Que Trobaràs",
+        "highlights_title": "Un Mapa Viu Per A Propietaris De Gossos",
+        "highlight_map_title": "Mapa Pet Friendly",
+        "highlight_map_desc": "Descobreix allotjaments, hostaleria i rutes per a gossos amb filtres per zona, tipus de servei i accessibilitat.",
+        "highlight_calendar_title": "Calendari & Esdeveniments",
+        "highlight_calendar_desc": "Trobades canines, jornades d'adopció i activitats amb aigua per gaudir tot l'any.",
+        "highlight_community_title": "Comunitat & Adopcions",
+        "highlight_community_desc": "Connecta amb protectores, associacions i xarxes d'ajuda per a gossos perduts.",
+        "layers_badge": "Prioritats Nord 2026",
+        "layers_title": "Mapa Per Capes Amb Dades Verificades",
+        "layers_desc": "Platges aptes, veterinaris 24h, guarderies amb ocupació en temps real, rutes amb aigua/ombra, restaurants pet friendly, transport amb gos i ordenances municipals.",
+        "tech_title": "Productes tecnològics populars",
+        "tech_desc": "Curació de tecnologia útil per a seguretat, salut i benestar caní.",
+        "integrations_title": "Integracions necessàries",
+        "integration_1": "API d'ocupació per a guarderies i hotels canins.",
+        "integration_2": "Font oficial de platges i ordenances per CCAA.",
+        "integration_3": "Directori de col·legis veterinaris i urgències.",
+        "integration_4": "Rutes verificades per la comunitat i administracions.",
+        "legal_badge": "Legal + Salut",
+        "legal_title": "Compliment I Atenció Preventiva",
+        "legal_desc": "Passaport digital, cursos obligatoris, assegurances, telemedicina i triatge assistit per IA.",
+        "assistance_badge": "Gossos de suport",
+        "assistance_title": "Centres I Associacions De Referència",
+        "assistance_desc": "Directori curat de gossos guia, assistència i teràpia amb filtres per regió i tipus.",
+        "business_badge": "Negocis",
+        "business_title": "Serveis Per A Propietaris",
+        "business_title2": "De Gossos",
+        "business_desc": "Aquí es mostren les categories que trobaràs al nostre directori. Tot pensat per a la vida real amb el teu gos.",
+        "biz_accommodation": "Allotjaments i càmpings",
+        "biz_vets": "Veterinaris 24h i perruqueries",
+        "biz_kennels": "Guarderies i hotels canins",
+        "biz_shops": "Botigues i alimentació",
+        "biz_trainers": "Ensinistadors professionals",
+        "biz_transport": "Transport pet friendly",
+        "biz_hospitality": "Hostaleria pet friendly",
+        "biz_subs_title": "Subscripcions i formularis",
+        "biz_subs_desc": "Els negocis poden registrar-se i actualitzar la seva informació amb un formulari ràpid. També oferim subscripcions per destacar al mapa.",
+        "biz_subs_cta": "Vull aparèixer al mapa",
+        "map_badge": "Explora el Nord",
+        "map_title": "Mapa Interactiu",
+        "map_desc": "Descobreix guarderies, veterinaris, platges canines i gossos en adopció a prop teu.",
+        "leisure_badge": "Lleure",
+        "leisure_title": "Plans, Comunitat",
+        "leisure_title2": "I Contingut",
+        "leisure_desc": "Des de rutes amb aigua fins a continguts i recursos útils: tot ordenat perquè puguis planificar la teva setmana amb el teu gos.",
+        "leisure_routes": "Rutes i rutes amb aigua",
+        "leisure_beaches": "Platges i platges fluvials",
+        "leisure_events": "Esdeveniments i trobades canines",
+        "leisure_forum": "Fòrum i comunitat",
+        "leisure_youtube": "Canals de YouTube sobre gossos",
+        "leisure_adoption": "Comunitat, adopcions i gossos perduts",
+        "leisure_podcasts": "Podcasts i ràdio canina",
+        "leisure_books": "Llibres, manuals i consells",
+        "leisure_support": "Gossos de suport",
+        "leisure_tech": "Tecnologia per a gossos",
+        "leisure_laws": "Lleis i ordenances canines",
+        "leisure_movies": "Pel·lícules per a amants dels gossos",
+        "db_title": "BD de gossos",
+        "db_desc": "Fitxes bàsiques, avisos de pèrdua, adopcions i protectores amb informació actualitzada.",
+        "calendar_title": "Calendari compartit",
+        "calendar_desc": "Publica esdeveniments, trobades i rutes amb aigua perquè altres s'hi puguin sumar.",
+        "collab_map_title": "Mapa col·laboratiu",
+        "collab_map_desc": "La comunitat pot suggerir nous llocs i verificar si segueixen sent pet friendly.",
+        "content_title": "Continguts Per A Amants Dels Gossos",
+        "content_desc": "Podcasts, llibres, manuals, canals de YouTube, tecnologia canina i cinema per a qui viu el món dels gossos al màxim.",
+        "newsletter_placeholder": "Rep avisos i novetats",
+        "newsletter_cta": "Subscriure'm",
+        "newsletter_note": "Avisos reals, zero spam."
+    },
+    "footer": {
+        "map": "Mapa",
+        "layers": "Capes",
+        "interactive": "Interactiu",
+        "legal": "Legal",
+        "business": "Negocis",
+        "support": "Suport",
+        "community": "Comunitat",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
