--- a/web/src/i18n/messages/en.json
+++ b/web/src/i18n/messages/en.json
@@ -18,5 +18,85 @@
         "description": "Huellas del Norte brings together dog-friendly services, businesses and leisure in one place: from 24h veterinarians to water trails.",
         "cta_routes": "Explore Routes",
         "cta_passport": "Digital Passport"
+    },
+    "home": {
+        "highlights_badge": "What You'll Find",
+        "highlights_title": "A Living Map For Dog Owners",
+        "highlight_map_title": "Pet Friendly Map",
+        "highlight_map_desc": "Discover accommodations, restaurants and dog trails with filters by area, service type and accessibility.",
+        "highlight_calendar_title": "Calendar & Events",
+        "highlight_calendar_desc": "Dog meetups, adoption days and water activities to enjoy all year round.",
+        "highlight_community_title": "Community & Adoptions",
+        "highlight_community_desc": "Connect with shelters, associations and networks helping lost dogs.",
+        "layers_badge": "North Priorities 2026",
+        "layers_title": "Layered Map With Verified Data",
+        "layers_desc": "Dog-friendly beaches, 24h vets, kennels with real-time occupancy, water/shade trails, pet-friendly restaurants, dog transport and municipal regulations. Every point is validated with public sources or direct integration.",
+        "tech_title": "Popular tech products",
+        "tech_desc": "Curated technology for canine safety, health and well-being.",
+        "integrations_title": "Required integrations",
+        "integration_1": "Occupancy API for dog kennels and hotels.",
+        "integration_2": "Official beach and regulation sources by region.",
+        "integration_3": "Directory of veterinary colleges and emergencies.",
+        "integration_4": "Routes verified by community and authorities.",
+        "legal_badge": "Legal + Health",
+        "legal_title": "Compliance And Preventive Care",
+        "legal_desc": "Digital passport, mandatory courses, insurance, telemedicine and AI-assisted triage.",
+        "assistance_badge": "Support dogs",
+        "assistance_title": "Reference Centers And Associations",
+        "assistance_desc": "Curated directory of guide, assistance and therapy dogs with filters by region and type.",
+        "business_badge": "Businesses",
+        "business_title": "Services For Dog",
+        "business_title2": "Owners",
+        "business_desc": "Here are the categories you'll find in our directory. Everything designed for real life with your dog.",
+        "biz_accommodation": "Accommodation and campsites",
+        "biz_vets": "24h vets and groomers",
+        "biz_kennels": "Dog kennels and hotels",
+        "biz_shops": "Shops and pet food",
+        "biz_trainers": "Professional trainers",
+        "biz_transport": "Pet-friendly transport",
+        "biz_hospitality": "Pet-friendly hospitality",
+        "biz_subs_title": "Subscriptions and forms",
+        "biz_subs_desc": "Businesses can register and update their information with a quick form. We also offer subscriptions to stand out on the map.",
+        "biz_subs_cta": "I want to appear on the map",
+        "map_badge": "Explore the North",
+        "map_title": "Interactive Map",
+        "map_desc": "Discover kennels, vets, dog beaches and dogs for adoption near you. Activate the layers you're interested in.",
+        "leisure_badge": "Leisure",
+        "leisure_title": "Plans, Community",
+        "leisure_title2": "And Content",
+        "leisure_desc": "From water trails to useful content and resources: everything organized so you can plan your week with your dog.",
+        "leisure_routes": "Trails and water trails",
+        "leisure_beaches": "Beaches and river beaches",
+        "leisure_events": "Events and dog meetups",
+        "leisure_forum": "Forum and community",
+        "leisure_youtube": "YouTube channels about dogs",
+        "leisure_adoption": "Community, adoptions and lost dogs",
+        "leisure_podcasts": "Podcasts and dog radio",
+        "leisure_books": "Books, manuals and tips",
+        "leisure_support": "Support dogs",
+        "leisure_tech": "Technology for dogs",
+        "leisure_laws": "Canine laws and regulations",
+        "leisure_movies": "Movies for dog lovers",
+        "db_title": "Dog database",
+        "db_desc": "Basic profiles, loss alerts, adoptions and shelters with up-to-date information.",
+        "calendar_title": "Shared calendar",
+        "calendar_desc": "Publish events, meetups and water trails so others can join.",
+        "collab_map_title": "Collaborative map",
+        "collab_map_desc": "The community can suggest new places and verify if they're still pet friendly.",
+        "content_title": "Content For Dog Lovers",
+        "content_desc": "Podcasts, books, manuals, YouTube channels, canine tech and movies for those who live the dog world to the fullest.",
+        "newsletter_placeholder": "Get alerts and news",
+        "newsletter_cta": "Subscribe",
+        "newsletter_note": "Real alerts, zero spam."
+    },
+    "footer": {
+        "map": "Map",
+        "layers": "Layers",
+        "interactive": "Interactive",
+        "legal": "Legal",
+        "business": "Businesses",
+        "support": "Support",
+        "community": "Community",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
