--- a/web/src/i18n/messages/es.json
+++ b/web/src/i18n/messages/es.json
@@ -18,5 +18,85 @@
         "description": "Huellas del Norte reúne servicios, negocios y ocio pet friendly en un solo lugar: desde veterinarios 24h hasta rutas con agua.",
         "cta_routes": "Explorar Rutas",
         "cta_passport": "Pasaporte Digital"
+    },
+    "home": {
+        "highlights_badge": "Lo Que Vas A Encontrar",
+        "highlights_title": "Un Mapa Vivo Para Dueños De Perros",
+        "highlight_map_title": "Mapa Pet Friendly",
+        "highlight_map_desc": "Descubre alojamientos, hostelería y rutas para perros con filtros por zona, tipo de servicio y accesibilidad.",
+        "highlight_calendar_title": "Calendario & Eventos",
+        "highlight_calendar_desc": "Quedadas perrunas, jornadas de adopción y actividades con agua para disfrutar todo el año.",
+        "highlight_community_title": "Comunidad & Adopciones",
+        "highlight_community_desc": "Conecta con protectoras, asociaciones y redes de ayuda para perros perdidos.",
+        "layers_badge": "Prioridades Norte 2026",
+        "layers_title": "Mapa Por Capas Con Datos Verificados",
+        "layers_desc": "Playas aptas, veterinarios 24h, guarderías con ocupación en tiempo real, rutas con agua/sombra, restaurantes pet friendly, transporte con perro y ordenanzas municipales. Cada punto se valida con fuentes públicas o integración directa.",
+        "tech_title": "Productos tecnológicos populares",
+        "tech_desc": "Curación inicial de tecnología útil para seguridad, salud y bienestar canino.",
+        "integrations_title": "Integraciones necesarias",
+        "integration_1": "API de ocupación para guarderías y hoteles caninos.",
+        "integration_2": "Fuente oficial de playas y ordenanzas por CCAA.",
+        "integration_3": "Directorio de colegios veterinarios y urgencias.",
+        "integration_4": "Rutas verificadas por comunidad y administraciones.",
+        "legal_badge": "Legal + Salud",
+        "legal_title": "Cumplimiento Y Atención Preventiva",
+        "legal_desc": "Pasaporte digital, cursos obligatorios, seguros, telemedicina y triaje asistido por IA.",
+        "assistance_badge": "Perros de apoyo",
+        "assistance_title": "Centros y Asociaciones de Referencia",
+        "assistance_desc": "Directorio curado de perros guía, asistencia y terapia con filtros por región y tipo.",
+        "business_badge": "Negocios",
+        "business_title": "Servicios Para Dueños",
+        "business_title2": "De Perros",
+        "business_desc": "Aquí se muestran las categorías que encontrarás en nuestro directorio. Todo pensado para la vida real con tu perro.",
+        "biz_accommodation": "Alojamientos y campings",
+        "biz_vets": "Veterinarios 24h y peluquerías",
+        "biz_kennels": "Guarderías y hoteles caninos",
+        "biz_shops": "Tiendas y alimentación",
+        "biz_trainers": "Adiestradores profesionales",
+        "biz_transport": "Transporte pet friendly",
+        "biz_hospitality": "Hostelería pet friendly",
+        "biz_subs_title": "Suscripciones y formularios",
+        "biz_subs_desc": "Los negocios pueden registrarse y actualizar su información con un formulario rápido. También ofrecemos suscripciones para destacar en el mapa.",
+        "biz_subs_cta": "Quiero aparecer en el mapa",
+        "map_badge": "Explora el Norte",
+        "map_title": "Mapa Interactivo",
+        "map_desc": "Descubre guarderías, veterinarios, playas caninas y perros en adopción cerca de ti. Activa las capas que te interesen.",
+        "leisure_badge": "Ocio",
+        "leisure_title": "Planes, Comunidad",
+        "leisure_title2": "Y Contenido",
+        "leisure_desc": "Desde rutas con agua hasta contenidos y recursos útiles: todo ordenado para que puedas planificar tu semana con tu perro.",
+        "leisure_routes": "Rutas y rutas con agua",
+        "leisure_beaches": "Playas y playas fluviales",
+        "leisure_events": "Eventos apropiados y quedadas perrunas",
+        "leisure_forum": "Foro y comunidad",
+        "leisure_youtube": "Canales de YouTube sobre perros",
+        "leisure_adoption": "Comunidad, adopciones y perros perdidos",
+        "leisure_podcasts": "Podcasts y radio perruna",
+        "leisure_books": "Libros, manuales y consejos",
+        "leisure_support": "Perros de apoyo",
+        "leisure_tech": "Tecnología para perros",
+        "leisure_laws": "Leyes y ordenanzas caninas",
+        "leisure_movies": "Películas para amantes de perros",
+        "db_title": "BD de perros",
+        "db_desc": "Fichas básicas, avisos de pérdida, adopciones y protectoras con información actualizada.",
+        "calendar_title": "Calendario compartido",
+        "calendar_desc": "Publica eventos, quedadas y rutas con agua para que otros puedan sumarse.",
+        "collab_map_title": "Mapa colaborativo",
+        "collab_map_desc": "La comunidad puede sugerir nuevos lugares y verificar si siguen siendo pet friendly.",
+        "content_title": "Contenidos Para Amantes De Los Perros",
+        "content_desc": "Podcasts, libros, manuales, canales de YouTube, tecnología canina y cine para quienes viven el mundo perruno al máximo.",
+        "newsletter_placeholder": "Recibe avisos y novedades",
+        "newsletter_cta": "Suscribirme",
+        "newsletter_note": "Avisos reales, cero spam."
+    },
+    "footer": {
+        "map": "Mapa",
+        "layers": "Capas",
+        "interactive": "Interactivo",
+        "legal": "Legal",
+        "business": "Negocios",
+        "support": "Apoyo",
+        "community": "Comunidad",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
