--- a/web/src/i18n/messages/eu.json
+++ b/web/src/i18n/messages/eu.json
@@ -10,5 +10,93 @@
         "accomodation": "Ostatuak",
         "community": "Komunitatea",
         "store": "Denda"
+    },
+    "hero": {
+        "badge": "Mapa, planak eta txakur komunitatea",
+        "title1": "Behar duzun guztia",
+        "title2": "txakurrarekin bizitzeko",
+        "description": "Huellas del Norte-k txakurrentzako zerbitzuak, negozioak eta aisia toki bakarrean biltzen ditu: 24h albaitarietatik ur-ibilbidetaraino.",
+        "cta_routes": "Ibilbideak arakatu",
+        "cta_passport": "Pasaporte digitala"
+    },
+    "home": {
+        "highlights_badge": "Zer Aurkituko Duzun",
+        "highlights_title": "Txakur Jabeen Mapa Bizia",
+        "highlight_map_title": "Pet Friendly Mapa",
+        "highlight_map_desc": "Ostatu, jatetxe eta txakurrentzako ibilbideak ezagutu eremuz, zerbitzu motaz eta irisgarritasunaz iragaz.",
+        "highlight_calendar_title": "Egutegia & Ekitaldiak",
+        "highlight_calendar_desc": "Txakur topaketak, adopzio jardunaldiak eta ur-jarduerak urte osoan gozatzeko.",
+        "highlight_community_title": "Komunitatea & Adopzioak",
+        "highlight_community_desc": "Babeslekuekin, elkarteekin eta galdutako txakurrentzako sare laguntzaileekin konektatu.",
+        "layers_badge": "Iparraldeko Lehentasunak 2026",
+        "layers_title": "Geruza Bidezko Mapa Egiaztatu Datuekin",
+        "layers_desc": "Onartutako hondartzak, 24h albaitariak, txakur-ezarrerak denbora errealeko okupazioarekin, ur/itzal ibilbideak, pet friendly jatetxeak, txakurrekin garraioa eta udal araudiak.",
+        "tech_title": "Teknologia produktu ezagunak",
+        "tech_desc": "Txakurren segurtasunerako, osasunerako eta ongizaterako teknologia hautatua.",
+        "integrations_title": "Beharrezko integrazioak",
+        "integration_1": "Txakur-ostatuetako okupazio APIa.",
+        "integration_2": "Hondartza eta araudi iturri ofizialak eskualdeka.",
+        "integration_3": "Albaitari kolejio eta larrialdien direktorioa.",
+        "integration_4": "Komunitate eta administrazioek egiaztatutako ibilbideak.",
+        "legal_badge": "Legea + Osasuna",
+        "legal_title": "Betetze Eta Aurrezaingo Atentzioa",
+        "legal_desc": "Pasaporte digitala, derrigorrezko ikastaroak, aseguruak, telemedikuntzaN eta IAz lagundutako triajea.",
+        "assistance_badge": "Laguntza txakurrak",
+        "assistance_title": "Erreferentziako Zentroak Eta Elkarteak",
+        "assistance_desc": "Gidari, laguntza eta terapia txakurren direktorio hautatua eskualde eta motaren arabera.",
+        "business_badge": "Negozioak",
+        "business_title": "Txakur Jabeen",
+        "business_title2": "Zerbitzuak",
+        "business_desc": "Hemen gure direktorioan aurkituko dituzun kategoriak agertzen dira. Dena txakurrarekin benetako bizitzarako pentsatua.",
+        "biz_accommodation": "Ostatuak eta kanpinak",
+        "biz_vets": "24h albaitariak eta ile-apaindegiak",
+        "biz_kennels": "Txakur-ezarrerak eta txakur-hotelak",
+        "biz_shops": "Dendak eta elikadura",
+        "biz_trainers": "Hezitzaile profesionalak",
+        "biz_transport": "Pet friendly garraioa",
+        "biz_hospitality": "Pet friendly ostalaritza",
+        "biz_subs_title": "Harpidetzak eta formularioak",
+        "biz_subs_desc": "Negozioek erregistratu eta beren informazioa eguneratu dezakete formulario azkar batekin. Mapan nabarmentzeko harpidetzak ere eskaintzen ditugu.",
+        "biz_subs_cta": "Mapan agertu nahi dut",
+        "map_badge": "Iparraldea Arakatu",
+        "map_title": "Mapa Interaktiboa",
+        "map_desc": "Txakur-ezarrerak, albaitariak, txakur hondartzak eta adopziorako txakurrak ezagutu zure inguruan.",
+        "leisure_badge": "Aisia",
+        "leisure_title": "Planak, Komunitatea",
+        "leisure_title2": "Eta Edukiak",
+        "leisure_desc": "Ur-ibilbidetik eduki eta baliabide erabilgarrietaraino: dena antolatuta zure astea txakurrarekin planifikatzeko.",
+        "leisure_routes": "Ibilbideak eta ur-ibilbideak",
+        "leisure_beaches": "Hondartzak eta ibai hondartzak",
+        "leisure_events": "Ekitaldiak eta txakur topaketak",
+        "leisure_forum": "Foroa eta komunitatea",
+        "leisure_youtube": "YouTubeko txakur kanalak",
+        "leisure_adoption": "Komunitatea, adopzioak eta galdutako txakurrak",
+        "leisure_podcasts": "Podcastak eta txakur irratia",
+        "leisure_books": "Liburuak, eskuliburuak eta aholkuak",
+        "leisure_support": "Laguntza txakurrak",
+        "leisure_tech": "Txakurrentzako teknologia",
+        "leisure_laws": "Txakur legeak eta araudiak",
+        "leisure_movies": "Txakur zaleentzako filmak",
+        "db_title": "Txakur datu-basea",
+        "db_desc": "Oinarrizko fitxak, galera abisuak, adopzioak eta babeslekeak informazio eguneratuarekin.",
+        "calendar_title": "Egutegi partekatua",
+        "calendar_desc": "Ekitaldiak, topaketak eta ur-ibilbideak argitaratu besteak batu daitezen.",
+        "collab_map_title": "Mapa kolaboratiboa",
+        "collab_map_desc": "Komunitateak toki berriak proposatu eta oraindik pet friendly diren egiaztatu dezake.",
+        "content_title": "Txakur Zaleentzako Edukiak",
+        "content_desc": "Podcastak, liburuak, eskuliburuak, YouTubeko kanalak, txakur teknologia eta zinema txakur mundua bizitzez bizi dutenentzat.",
+        "newsletter_placeholder": "Jaso abisuak eta berriak",
+        "newsletter_cta": "Harpidetu",
+        "newsletter_note": "Benetako abisuak, zero spam."
+    },
+    "footer": {
+        "map": "Mapa",
+        "layers": "Geruzak",
+        "interactive": "Interaktiboa",
+        "legal": "Legea",
+        "business": "Negozioak",
+        "support": "Laguntza",
+        "community": "Komunitatea",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
