--- a/web/src/i18n/messages/fr.json
+++ b/web/src/i18n/messages/fr.json
@@ -10,5 +10,93 @@
         "accomodation": "Hébergement",
         "community": "Communauté",
         "store": "Boutique"
+    },
+    "hero": {
+        "badge": "Carte, plans et communauté canine",
+        "title1": "Tout ce dont vous avez besoin",
+        "title2": "pour vivre avec votre chien",
+        "description": "Huellas del Norte rassemble services, commerces et loisirs adaptés aux chiens en un seul endroit : des vétérinaires 24h aux sentiers aquatiques.",
+        "cta_routes": "Explorer les itinéraires",
+        "cta_passport": "Passeport numérique"
+    },
+    "home": {
+        "highlights_badge": "Ce Que Vous Trouverez",
+        "highlights_title": "Une Carte Vivante Pour Les Propriétaires De Chiens",
+        "highlight_map_title": "Carte Pet Friendly",
+        "highlight_map_desc": "Découvrez hébergements, restaurants et sentiers pour chiens avec des filtres par zone, type de service et accessibilité.",
+        "highlight_calendar_title": "Calendrier & Événements",
+        "highlight_calendar_desc": "Rencontres canines, journées d'adoption et activités aquatiques à apprécier toute l'année.",
+        "highlight_community_title": "Communauté & Adoptions",
+        "highlight_community_desc": "Connectez-vous avec les refuges, associations et réseaux d'aide aux chiens perdus.",
+        "layers_badge": "Priorités Nord 2026",
+        "layers_title": "Carte Par Couches Avec Données Vérifiées",
+        "layers_desc": "Plages autorisées, vétérinaires 24h, chenils avec occupation en temps réel, sentiers avec eau/ombre, restaurants pet friendly, transport avec chien et réglementations municipales.",
+        "tech_title": "Produits technologiques populaires",
+        "tech_desc": "Curation de technologie utile pour la sécurité, la santé et le bien-être canin.",
+        "integrations_title": "Intégrations nécessaires",
+        "integration_1": "API d'occupation pour chenils et hôtels canins.",
+        "integration_2": "Source officielle de plages et réglementations par région.",
+        "integration_3": "Annuaire des collèges vétérinaires et urgences.",
+        "integration_4": "Itinéraires vérifiés par la communauté et les administrations.",
+        "legal_badge": "Juridique + Santé",
+        "legal_title": "Conformité Et Soins Préventifs",
+        "legal_desc": "Passeport numérique, cours obligatoires, assurances, télémédecine et triage assisté par IA.",
+        "assistance_badge": "Chiens d'assistance",
+        "assistance_title": "Centres Et Associations De Référence",
+        "assistance_desc": "Annuaire curé de chiens guides, d'assistance et de thérapie avec filtres par région et type.",
+        "business_badge": "Commerces",
+        "business_title": "Services Pour Les",
+        "business_title2": "Propriétaires De Chiens",
+        "business_desc": "Voici les catégories que vous trouverez dans notre annuaire. Tout pensé pour la vie réelle avec votre chien.",
+        "biz_accommodation": "Hébergements et campings",
+        "biz_vets": "Vétérinaires 24h et toiletteurs",
+        "biz_kennels": "Chenils et hôtels canins",
+        "biz_shops": "Boutiques et alimentation",
+        "biz_trainers": "Éducateurs professionnels",
+        "biz_transport": "Transport pet friendly",
+        "biz_hospitality": "Restauration pet friendly",
+        "biz_subs_title": "Abonnements et formulaires",
+        "biz_subs_desc": "Les commerces peuvent s'inscrire et mettre à jour leurs informations avec un formulaire rapide. Nous offrons aussi des abonnements pour se démarquer sur la carte.",
+        "biz_subs_cta": "Je veux apparaître sur la carte",
+        "map_badge": "Explorez le Nord",
+        "map_title": "Carte Interactive",
+        "map_desc": "Découvrez chenils, vétérinaires, plages canines et chiens à adopter près de chez vous.",
+        "leisure_badge": "Loisirs",
+        "leisure_title": "Plans, Communauté",
+        "leisure_title2": "Et Contenu",
+        "leisure_desc": "Des sentiers aquatiques aux contenus utiles : tout organisé pour planifier votre semaine avec votre chien.",
+        "leisure_routes": "Sentiers et sentiers aquatiques",
+        "leisure_beaches": "Plages et plages fluviales",
+        "leisure_events": "Événements et rencontres canines",
+        "leisure_forum": "Forum et communauté",
+        "leisure_youtube": "Chaînes YouTube sur les chiens",
+        "leisure_adoption": "Communauté, adoptions et chiens perdus",
+        "leisure_podcasts": "Podcasts et radio canine",
+        "leisure_books": "Livres, manuels et conseils",
+        "leisure_support": "Chiens d'assistance",
+        "leisure_tech": "Technologie pour chiens",
+        "leisure_laws": "Lois et réglementations canines",
+        "leisure_movies": "Films pour amoureux des chiens",
+        "db_title": "Base de données canine",
+        "db_desc": "Fiches basiques, alertes de perte, adoptions et refuges avec informations actualisées.",
+        "calendar_title": "Calendrier partagé",
+        "calendar_desc": "Publiez événements, rencontres et sentiers aquatiques pour que d'autres puissent participer.",
+        "collab_map_title": "Carte collaborative",
+        "collab_map_desc": "La communauté peut suggérer de nouveaux lieux et vérifier s'ils sont toujours pet friendly.",
+        "content_title": "Contenus Pour Les Amoureux Des Chiens",
+        "content_desc": "Podcasts, livres, manuels, chaînes YouTube, technologie canine et cinéma pour ceux qui vivent le monde canin à fond.",
+        "newsletter_placeholder": "Recevez alertes et nouveautés",
+        "newsletter_cta": "S'abonner",
+        "newsletter_note": "Alertes réelles, zéro spam."
+    },
+    "footer": {
+        "map": "Carte",
+        "layers": "Couches",
+        "interactive": "Interactif",
+        "legal": "Juridique",
+        "business": "Commerces",
+        "support": "Assistance",
+        "community": "Communauté",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
