--- a/web/src/i18n/messages/gl.json
+++ b/web/src/i18n/messages/gl.json
@@ -10,5 +10,93 @@
         "accomodation": "Aloxamento",
         "community": "Comunidade",
         "store": "Tenda"
+    },
+    "hero": {
+        "badge": "Mapa, plans e comunidade canina",
+        "title1": "Todo o que precisas",
+        "title2": "para vivir co teu can",
+        "description": "Huellas del Norte reúne servizos, negocios e lecer pet friendly nun só lugar: desde veterinarios 24h ata rutas con auga.",
+        "cta_routes": "Explorar Rutas",
+        "cta_passport": "Pasaporte Dixital"
+    },
+    "home": {
+        "highlights_badge": "O Que Vas Atopar",
+        "highlights_title": "Un Mapa Vivo Para Donos De Cans",
+        "highlight_map_title": "Mapa Pet Friendly",
+        "highlight_map_desc": "Descobre aloxamentos, hostalería e rutas para cans con filtros por zona, tipo de servizo e accesibilidade.",
+        "highlight_calendar_title": "Calendario & Eventos",
+        "highlight_calendar_desc": "Quedadas caninas, xornadas de adopción e actividades con auga para gozar todo o ano.",
+        "highlight_community_title": "Comunidade & Adopcións",
+        "highlight_community_desc": "Conecta con protectoras, asociacións e redes de axuda para cans perdidos.",
+        "layers_badge": "Prioridades Norte 2026",
+        "layers_title": "Mapa Por Capas Con Datos Verificados",
+        "layers_desc": "Praias aptas, veterinarios 24h, garderías con ocupación en tempo real, rutas con auga/sombra, restaurantes pet friendly, transporte con can e ordenanzas municipais.",
+        "tech_title": "Produtos tecnolóxicos populares",
+        "tech_desc": "Curación de tecnoloxía útil para seguridade, saúde e benestar canino.",
+        "integrations_title": "Integracións necesarias",
+        "integration_1": "API de ocupación para garderías e hoteis caninos.",
+        "integration_2": "Fonte oficial de praias e ordenanzas por CCAA.",
+        "integration_3": "Directorio de colexios veterinarios e urxencias.",
+        "integration_4": "Rutas verificadas pola comunidade e administracións.",
+        "legal_badge": "Legal + Saúde",
+        "legal_title": "Cumprimento E Atención Preventiva",
+        "legal_desc": "Pasaporte dixital, cursos obrigatorios, seguros, telemedicina e triaxe asistido por IA.",
+        "assistance_badge": "Cans de apoio",
+        "assistance_title": "Centros E Asociacións De Referencia",
+        "assistance_desc": "Directorio curado de cans guía, asistencia e terapia con filtros por rexión e tipo.",
+        "business_badge": "Negocios",
+        "business_title": "Servizos Para Donos",
+        "business_title2": "De Cans",
+        "business_desc": "Aquí se mostran as categorías que atoparás no noso directorio. Todo pensado para a vida real co teu can.",
+        "biz_accommodation": "Aloxamentos e campings",
+        "biz_vets": "Veterinarios 24h e peluquerías",
+        "biz_kennels": "Garderías e hoteis caninos",
+        "biz_shops": "Tendas e alimentación",
+        "biz_trainers": "Adestradores profesionais",
+        "biz_transport": "Transporte pet friendly",
+        "biz_hospitality": "Hostalería pet friendly",
+        "biz_subs_title": "Subscricións e formularios",
+        "biz_subs_desc": "Os negocios poden rexistrarse e actualizar a súa información cun formulario rápido. Tamén ofrecemos subscricións para destacar no mapa.",
+        "biz_subs_cta": "Quero aparecer no mapa",
+        "map_badge": "Explora o Norte",
+        "map_title": "Mapa Interactivo",
+        "map_desc": "Descobre garderías, veterinarios, praias caninas e cans en adopción preto de ti.",
+        "leisure_badge": "Lecer",
+        "leisure_title": "Plans, Comunidade",
+        "leisure_title2": "E Contido",
+        "leisure_desc": "Desde rutas con auga ata contidos e recursos útiles: todo ordenado para que poidas planificar a túa semana co teu can.",
+        "leisure_routes": "Rutas e rutas con auga",
+        "leisure_beaches": "Praias e praias fluviais",
+        "leisure_events": "Eventos e quedadas caninas",
+        "leisure_forum": "Foro e comunidade",
+        "leisure_youtube": "Canles de YouTube sobre cans",
+        "leisure_adoption": "Comunidade, adopcións e cans perdidos",
+        "leisure_podcasts": "Podcasts e radio canina",
+        "leisure_books": "Libros, manuais e consellos",
+        "leisure_support": "Cans de apoio",
+        "leisure_tech": "Tecnoloxía para cans",
+        "leisure_laws": "Leis e ordenanzas caninas",
+        "leisure_movies": "Películas para amantes dos cans",
+        "db_title": "BD de cans",
+        "db_desc": "Fichas básicas, avisos de perda, adopcións e protectoras con información actualizada.",
+        "calendar_title": "Calendario compartido",
+        "calendar_desc": "Publica eventos, quedadas e rutas con auga para que outros poidan sumarse.",
+        "collab_map_title": "Mapa colaborativo",
+        "collab_map_desc": "A comunidade pode suxerir novos lugares e verificar se seguen sendo pet friendly.",
+        "content_title": "Contidos Para Amantes Dos Cans",
+        "content_desc": "Podcasts, libros, manuais, canles de YouTube, tecnoloxía canina e cine para quen vive o mundo canino ao máximo.",
+        "newsletter_placeholder": "Recibe avisos e novidades",
+        "newsletter_cta": "Subscribirme",
+        "newsletter_note": "Avisos reais, cero spam."
+    },
+    "footer": {
+        "map": "Mapa",
+        "layers": "Capas",
+        "interactive": "Interactivo",
+        "legal": "Legal",
+        "business": "Negocios",
+        "support": "Apoio",
+        "community": "Comunidade",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
