--- a/web/src/i18n/messages/zh.json
+++ b/web/src/i18n/messages/zh.json
@@ -10,5 +10,93 @@
         "accomodation": "住宿",
         "community": "社区",
         "store": "商店"
+    },
+    "hero": {
+        "badge": "地图、计划和犬类社区",
+        "title1": "您需要的一切",
+        "title2": "与爱犬共同生活",
+        "description": "Huellas del Norte 将宠物友好的服务、商户和休闲汇聚一处：从24小时兽医到水上小径。",
+        "cta_routes": "探索路线",
+        "cta_passport": "数字护照"
+    },
+    "home": {
+        "highlights_badge": "您将发现",
+        "highlights_title": "一张为犬主打造的活地图",
+        "highlight_map_title": "宠物友好地图",
+        "highlight_map_desc": "按区域、服务类型和可达性筛选，发现住宿、餐饮和遛狗路线。",
+        "highlight_calendar_title": "日历与活动",
+        "highlight_calendar_desc": "狗狗聚会、领养日和水上活动，全年畅享。",
+        "highlight_community_title": "社区与领养",
+        "highlight_community_desc": "与收容所、协会和走失犬救助网络建立联系。",
+        "layers_badge": "2026北部优先事项",
+        "layers_title": "经过验证数据的分层地图",
+        "layers_desc": "准入海滩、24小时兽医、实时占用率的犬舍、有水/遮荫的小径、宠物友好餐厅、带犬交通和市政法规。每个点都通过公共来源或直接整合进行验证。",
+        "tech_title": "热门科技产品",
+        "tech_desc": "精选犬类安全、健康和福利相关科技。",
+        "integrations_title": "所需集成",
+        "integration_1": "犬舍和犬类酒店的占用率API。",
+        "integration_2": "各地区海滩和法规的官方来源。",
+        "integration_3": "兽医学院和急诊目录。",
+        "integration_4": "由社区和管理部门验证的路线。",
+        "legal_badge": "法律 + 健康",
+        "legal_title": "合规与预防护理",
+        "legal_desc": "数字护照、必修课程、保险、远程医疗和AI辅助分诊。",
+        "assistance_badge": "辅助犬",
+        "assistance_title": "参考中心和协会",
+        "assistance_desc": "精选导盲犬、辅助犬和治疗犬目录，按地区和类型筛选。",
+        "business_badge": "商户",
+        "business_title": "犬主",
+        "business_title2": "服务",
+        "business_desc": "这里展示您将在我们目录中找到的类别。一切为与爱犬的真实生活而设计。",
+        "biz_accommodation": "住宿和露营地",
+        "biz_vets": "24小时兽医和美容",
+        "biz_kennels": "犬舍和犬类酒店",
+        "biz_shops": "商店和宠物食品",
+        "biz_trainers": "专业训犬师",
+        "biz_transport": "宠物友好交通",
+        "biz_hospitality": "宠物友好餐饮",
+        "biz_subs_title": "订阅和表单",
+        "biz_subs_desc": "商户可以通过快速表单注册和更新信息。我们还提供订阅以在地图上突出显示。",
+        "biz_subs_cta": "我想出现在地图上",
+        "map_badge": "探索北部",
+        "map_title": "互动地图",
+        "map_desc": "发现您附近的犬舍、兽医、犬类海滩和待领养的狗狗。",
+        "leisure_badge": "休闲",
+        "leisure_title": "计划、社区",
+        "leisure_title2": "与内容",
+        "leisure_desc": "从水上小径到有用的内容和资源：一切井然有序，助您与爱犬规划一周。",
+        "leisure_routes": "小径和水上小径",
+        "leisure_beaches": "海滩和河滩",
+        "leisure_events": "活动和狗狗聚会",
+        "leisure_forum": "论坛和社区",
+        "leisure_youtube": "关于狗的YouTube频道",
+        "leisure_adoption": "社区、领养和走失犬",
+        "leisure_podcasts": "播客和犬类电台",
+        "leisure_books": "书籍、手册和建议",
+        "leisure_support": "辅助犬",
+        "leisure_tech": "犬类科技",
+        "leisure_laws": "犬类法律法规",
+        "leisure_movies": "爱犬人士的电影",
+        "db_title": "犬类数据库",
+        "db_desc": "基本档案、走失提醒、领养和收容所的最新信息。",
+        "calendar_title": "共享日历",
+        "calendar_desc": "发布活动、聚会和水上小径，让更多人参与。",
+        "collab_map_title": "协作地图",
+        "collab_map_desc": "社区可以推荐新地点并验证它们是否仍然宠物友好。",
+        "content_title": "爱犬人士的内容",
+        "content_desc": "播客、书籍、手册、YouTube频道、犬类科技和电影，为深度热爱犬类世界的人们。",
+        "newsletter_placeholder": "接收提醒和新闻",
+        "newsletter_cta": "订阅",
+        "newsletter_note": "真实提醒，零垃圾邮件。"
+    },
+    "footer": {
+        "map": "地图",
+        "layers": "图层",
+        "interactive": "互动",
+        "legal": "法律",
+        "business": "商户",
+        "support": "支持",
+        "community": "社区",
+        "copyright": "© 2026 Huellas del Norte."
     }
 }
